<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Principal"
    tools:context=".CargarMusica">


    <Button
        android:id="@+id/btnentrar"
        android:layout_width="162dp"
        android:layout_height="66dp"
        android:backgroundTint="#EC0FFF"
        android:fontFamily="@font/satoshibold"
        android:text="@string/subir"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.420"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.938" />

    <EditText
        android:id="@+id/etDuracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/correo"
        android:ems="10"
        android:fontFamily="@font/satoshiregular"
        android:hint="@string/tiempo"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/secundario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <EditText
        android:id="@+id/etArchivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="136dp"
        android:background="@drawable/correo"
        android:ems="10"
        android:fontFamily="@font/satoshiregular"
        android:hint="@string/archivo"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/secundario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etArtista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="232dp"
        android:background="@drawable/correo"
        android:ems="10"
        android:fontFamily="@font/satoshiregular"
        android:hint="@string/ArtistaM"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/secundario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etTema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/correo"
        android:ems="10"
        android:fontFamily="@font/satoshiregular"
        android:hint="@string/tema"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/secundario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.351" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="413dp"
        android:layout_height="210dp"
        android:background="@color/Principal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001"
        app:lottie_autoPlay="true"
        app:lottie_cacheComposition="true"
        app:lottie_fileName="uploadm.json"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_loop="true" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/subir"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@color/Principal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.830"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.820"
        app:lottie_autoPlay="true"
        app:lottie_cacheComposition="true"
        app:lottie_fileName="select.json"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/textView56"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/satoshiblack"
        android:text="@string/rellena"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.241" />
</androidx.constraintlayout.widget.ConstraintLayout>