<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Principal"
    tools:context=".Menus">

   <ImageView
       android:id="@+id/imageView9"
       android:layout_width="399dp"
       android:layout_height="242dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.0"
       app:srcCompat="@drawable/frame" />

   <ImageView
       android:id="@+id/imageView15"
       android:layout_width="265dp"
       android:layout_height="193dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.993"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.022"
       app:srcCompat="@drawable/dukipng" />

   <ImageView
       android:id="@+id/imageView16"
       android:layout_width="186dp"
       android:layout_height="97dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.497"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.0"
       app:srcCompat="@drawable/logotipo" />

   <ImageView
       android:id="@+id/imageView23"
       android:layout_width="82dp"
       android:layout_height="49dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.951"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.0"
       app:srcCompat="@drawable/option" />

   <ImageView
       android:id="@+id/imageView26"
       android:layout_width="59dp"
       android:layout_height="41dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.045"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.009"
       app:srcCompat="@drawable/atras" />

   <TextView
       android:id="@+id/textView42"
       android:layout_width="126dp"
       android:layout_height="60dp"
       android:fontFamily="@font/satoshiblack"
       android:text="@string/mensaje"
       android:textColor="@color/white"
       android:textSize="20sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.098"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.137" />

   <TextView
       android:id="@+id/textView43"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:fontFamily="@font/satoshiblack"
       android:text="@string/artistas"
       android:textColor="@color/white"
       android:textSize="20sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.069"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.270" />

   <androidx.cardview.widget.CardView
       android:layout_width="110dp"
       android:layout_height="110dp"
       android:layout_margin="10dp"
       app:cardCornerRadius="20dp"
       app:cardElevation="0dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.089"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.37">
      <ImageView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:src="@drawable/peso"
          tools:ignore="ContentDescription"/>


   </androidx.cardview.widget.CardView>

   <androidx.cardview.widget.CardView
       android:layout_width="110dp"
       android:layout_height="110dp"
       android:layout_margin="10dp"
       app:cardCornerRadius="20dp"
       app:cardElevation="0dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.807"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.37">
      <ImageView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:src="@drawable/mari"
          tools:ignore="ContentDescription"/>


   </androidx.cardview.widget.CardView>

   <androidx.cardview.widget.CardView
       android:layout_width="110dp"
       android:layout_height="110dp"
       android:layout_margin="10dp"
       app:cardCornerRadius="20dp"
       app:cardElevation="0dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.089"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.640">
      <ImageView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:src="@drawable/quevedo"
          tools:ignore="ContentDescription"/>


   </androidx.cardview.widget.CardView>

   <androidx.cardview.widget.CardView
       android:layout_width="110dp"
       android:layout_height="110dp"
       android:layout_margin="10dp"
       app:cardCornerRadius="20dp"
       app:cardElevation="0dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.78"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.640">
      <ImageView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:src="@drawable/soge"
          tools:ignore="ContentDescription"/>


   </androidx.cardview.widget.CardView>

   <TextView
       android:id="@+id/textView44"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:fontFamily="@font/satoshiblack"
       android:text="@string/junior"
       android:textColor="@color/white"
       android:textSize="14sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.176"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.97" />

   <TextView
       android:id="@+id/textView52"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:fontFamily="@font/satoshiblack"
       android:text="@string/quevedo"
       android:textColor="@color/white"
       android:textSize="14sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.169"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.727" />

   <TextView
       android:id="@+id/textView49"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:fontFamily="@font/satoshiblack"
       android:text="@string/soge"
       android:textColor="@color/white"
       android:textSize="14sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.764"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.727" />

   <TextView
       android:id="@+id/textView54"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:fontFamily="@font/satoshiblack"
       android:text="@string/arca"
       android:textColor="@color/white"
       android:textSize="14sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.730"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.97" />

   <TextView
       android:id="@+id/textView48"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:fontFamily="@font/satoshiblack"
       android:text="@string/peso"
       android:textColor="@color/white"
       android:textSize="14sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.154"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.490" />

   <TextView
       android:id="@+id/textView46"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:fontFamily="@font/satoshiregular"
       android:text="@string/mexico"
       android:textColor="@color/secundario"
       android:textSize="16sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.182"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.510" />

   <TextView
       android:id="@+id/textView50"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:fontFamily="@font/satoshiregular"
       android:text="@string/puerto"
       android:textColor="@color/secundario"
       android:textSize="16sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.750"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.994" />

   <TextView
       android:id="@+id/textView55"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:fontFamily="@font/satoshiregular"
       android:text="@string/españa"
       android:textColor="@color/secundario"
       android:textSize="16sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.727"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.756" />

   <TextView
       android:id="@+id/textView51"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:fontFamily="@font/satoshiregular"
       android:text="@string/mexico"
       android:textColor="@color/secundario"
       android:textSize="16sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.182"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.994" />

   <TextView
       android:id="@+id/textView53"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:fontFamily="@font/satoshiregular"
       android:text="@string/españa"
       android:textColor="@color/secundario"
       android:textSize="16sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.18"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.756" />

   <TextView
       android:id="@+id/textView47"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:fontFamily="@font/satoshiregular"
       android:text="@string/arge"
       android:textColor="@color/secundario"
       android:textSize="16sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.736"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.51" />

   <TextView
       android:id="@+id/textView45"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:fontFamily="@font/satoshiblack"
       android:text="@string/maria"
       android:textColor="@color/white"
       android:textSize="14sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.761"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.490" />

   <com.airbnb.lottie.LottieAnimationView
       android:id="@+id/lottieAnimationView4"
       android:layout_width="70dp"
       android:layout_height="35dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.450"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.270"
       app:lottie_autoPlay="true"
       app:lottie_cacheComposition="true"
       app:lottie_fileName="micro.json"
       app:lottie_imageAssetsFolder="assets"
       app:lottie_loop="true" />

   <androidx.cardview.widget.CardView
       android:layout_width="110dp"
       android:layout_height="110dp"
       android:layout_margin="10dp"
       app:cardCornerRadius="20dp"
       app:cardElevation="0dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.089"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.930">
      <ImageView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:src="@drawable/newh"
          tools:ignore="ContentDescription"/>

   </androidx.cardview.widget.CardView>

   <androidx.cardview.widget.CardView
       android:layout_width="110dp"
       android:layout_height="110dp"
       android:layout_margin="10dp"
       app:cardCornerRadius="20dp"
       app:cardElevation="0dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.790"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.930">
      <ImageView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:src="@drawable/arca"
          tools:ignore="ContentDescription"/>
   </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>